--- a/css/styles.css
+++ b/css/styles.css
@@ -17,29 +17,6 @@ header {
     position: relative;
 }
 
-/* header::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: inherit;
-    filter: blur(5px);
-    z-index: -1;
-}
-
-header::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(51, 51, 51, 0.5);
-    z-index: -1;
-} */
-
 header h1 {
     margin: 0;
     font-size: 2.5em;
@@ -133,6 +110,11 @@ header p {
 body.dark-mode #table-of-contents {
     background-color: #2a2a2a;
     border-color: #e3e0e0;
+}
+
+body.dark-mode #table-of-contents h2 {
+    color: #fff;
+    border-bottom-color: #444;
 }
 
 body.dark.mode #table-of-contents a {
