--- a/css/styles.css
+++ b/css/styles.css
@@ -112,11 +112,6 @@ body.dark-mode #table-of-contents {
     border-color: #444;
 }
 
-body.dark-mode #table-of-contents h2 {
-    color: #ffffff; /* Changé de #e0e0e0 à #ffffff pour un blanc pur */
-    border-bottom-color: #444;
-}
-
 body.dark.mode #table-of-contents a {
     color: #6ab0de;
 }
@@ -185,10 +180,10 @@ figcaption {
 
 .image-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
     gap: 20px;
+    margin-bottom: 20px;
 }
 
 .image-container img {
@@ -197,7 +192,7 @@ figcaption {
 }
 
 .responsive-image {
-    max-width: 100%;
+    max-width: 48%;
     height: auto;
     object-fit: contain;
 }
