Update table of contents color

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,10 @@ body.dark-mode #table-of-contents {
     border-color: #444;
 }
 
+body.dark.mode #table-of-contents h2 {
+    color: #ddd;
+}
+
 body.dark.mode #table-of-contents a {
     color: #6ab0de;
 }
