--- a/css/styles.css
+++ b/css/styles.css
@@ -109,15 +109,15 @@ header p {
 /* Ajustement pour le mode sombre */
 body.dark-mode #table-of-contents {
     background-color: #2a2a2a;
-    border-color: #444;
+    border-color: #fff;
 }
 
 body.dark.mode #table-of-contents h2 {
-    color: #fff;
+    color: #ddd;
 }
 
 body.dark-mode #table-of-contents a {
-    color: #ddd;
+    color: #fff;
 }
 
 body.dark-mode #table-of-contents a:hover {
