--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,10 @@ body.dark-mode #table-of-contents {
 }
 
 body.dark.mode #table-of-contents h2 {
+    margin-top: 0;
     color: #ddd;
+    border-bottom: 2px solid #333;
+    padding-bottom: 10px;
 }
 
 body.dark-mode #table-of-contents a {
