--- a/css/styles.css
+++ b/css/styles.css
@@ -209,3 +209,13 @@ figcaption {
         max-width: 45%;
     }
 }
+
+.reduced-size {
+    max-width: 80%;  /* Adjust this value as needed */
+    margin: 0 auto;  /* Centers the figure */
+}
+
+.reduced-size img {
+    width: 100%;
+    height: auto;
+}
