--- a/css/styles.css
+++ b/css/styles.css
@@ -112,11 +112,9 @@ body.dark-mode #table-of-contents {
     border-color: #333;
 }
 
-body.dark.mode #table-of-contents h2 {
-    margin-top: 0;
-    color: #9e2d2d;
-    border-bottom: 2px solid #333;
-    padding-bottom: 10px;
+body.dark-mode #table-of-contents h2 {
+    color: #fff;
+    border-bottom-color: #444;
 }
 
 body.dark-mode #table-of-contents a {
